--- a/index.html
+++ b/index.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>HTML5</title>
-    <meta charset="utf-8">
+<head>
+  <title>Gourmet au catering</title>
+  <meta charset="utf-8">
 
-    <link rel="stylesheet" href="assets/css/spapp.css" />
-    <link rel="stylesheet" href="assets/css/custom.css" />
+  <link rel="stylesheet" href="assets/css/spapp.css" />
+  <!-- <link rel="stylesheet" href="assets/css/custom.css" /> -->
 
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
-    </script>
-    <![endif]-->
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" />
 
-  <body>
+</head>
 
-    <nav role="navigation">
-      <ul>
-        <li><a href="#view_1">go to view 1</a></li>
-        <li><a href="#view_2">go to view 2</a></li>
-        <li><a href="#view_3">go to view 3</a></li>
-      </ul>
-    </nav>
+<body>
 
-    <main id="spapp" role="main">
-      <section id="view_2"></section>
-      <section id="view_3"><h1>view 3</h1></section>
-      <section id="error_404"><h1>Page not found</h1></section>
-      <section id="view_1" data-load="view_1.html" ></section>
-    </main>
+  <nav role="navigation">
+    <ul>
+      <!-- Navbar (sit on top) -->
+      <div class="w3-top">
+        <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+          <a href="#main" class="w3-bar-item w3-button">Gourmet au Catering</a>
+          <!-- Right-sided navbar links. Hide them on small screens -->
+          <div class="w3-right w3-hide-small">
+            <a href="#about" class="w3-bar-item w3-button">About</a>
+            <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+            <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+            <a href="login.php" class="w3-bar-item w3-button guests">Login</a>
+            <button class="w3-bar-item w3-button users" style="display: none;" onclick="logout()">Logout</button>
+          </div>
+        </div>
+      </div>
+    </ul>
+  </nav>
 
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script src="assets/js/jquery.spapp.js"></script>
-    <script src="assets/js/custom.js"></script>
+  <main id="spapp" role="main">
+    <section id="about"></section>
+    <section id="view_3">
+      <h1>view 3</h1>
+    </section>
+    <section id="error_404">
+      <h1>Page not found</h1>
+    </section>
+    <section id="main" data-load="main.html"></section>
+  </main>
 
-  </body>
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"
+    integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+
+  <script src="assets/js/jquery.spapp.js"></script>
+  <script src="assets/js/custom.js"></script>
+
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+
+</body>
 
 </html>
-
