Fetching Menu data from database

--- a/tpl/main.html
+++ b/tpl/main.html
@@ -39,20 +39,39 @@
     <div class="w3-row w3-padding-64" id="menu">
         <div class="w3-col l6 w3-padding-large">
             <h1 class="w3-center">Our Menu</h1><br>
-            <h4></h4>
-            <p class="w3-text-grey">Assortment of fresh baked fruit breads and muffins 5.50</p><br>
+            <script>
+                function getMenus() {
+                    $.ajax({
+                        url: "rest/menus",
+                        type: "GET",
+                        success: function (data) {
+                            for (let i = 0; i < data.length; i++) {
+                                var menu_name = "menu" + (i + 1);
+                                var name = "name" + (i + 1);
+                                document.getElementById(menu_name).innerHTML = data[i].menu_name;
+                                document.getElementById(name).innerHTML = data[i].name + " " + data[i].surname;
+                            }
+                        },
+                        error: function (data) {
+                            toastr.error(data.responseText);
+                        }
+                    });
+                }
+                getMenus();
+            </script>
 
-            <h4>Honey Almond Granola with Fruits</h4>
-            <p class="w3-text-grey">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</p><br>
 
-            <h4>Belgian Waffle</h4>
-            <p class="w3-text-grey">Vanilla flavored batter with malted flour 7.50</p><br>
+            <h4 id="menu1"></h4>
+            <p class="w3-text-grey">Made by: <span id="name1"></span></p><br>
 
-            <h4>Scrambled eggs</h4>
-            <p class="w3-text-grey">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p><br>
+            <h4 id="menu2"></h4>
+            <p class="w3-text-grey">Made by: <span id="name2"></span></p><br>
 
-            <h4>Blueberry Pancakes</h4>
-            <p class="w3-text-grey">With syrup, butter and lots of berries 8.50</p>
+            <h4 id="menu3"></h4>
+            <p class="w3-text-grey">Made by: <span id="name3"></span></p><br>
+
+            <h4 id="menu4"></h4>
+            <p class="w3-text-grey">Made by: <span id="name4"></span></p>
         </div>
 
         <div class="w3-col l6 w3-padding-large">
@@ -93,21 +112,6 @@
             class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
-<script>
-    function getMenus() {
-        $.ajax({
-            url: "rest/menus",
-            type: "GET",
-            success: function (data) {
-                var menus = data;
-            },
-            error: function (data) {
-                toastr.error(data.responseText);
-            }
-        });
-    }
 
-    getMenus();
-</script>
 
 </html>
